v0.4.1/_sources/gallery/images/contours.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/images/contours.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_images_contours.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_contours.py:


Contours
--------
The :meth:`pygmt.Figure.contour` method can plot contour lines from a table of points by direct triangulation.
The data for the triangulation can be provided using one of three methods:

#. ``x``, ``y``, ``z`` 1d :class:`numpy.ndarray` data columns.
#. ``data`` 2d :class:`numpy.ndarray` data matrix with 3 columns corresponding
   to ``x``, ``y``, ``z``.
#. ``data`` path string to a file containing the ``x``, ``y``, ``z`` in a
   tabular format.

The parameters ``levels`` and ``annotation`` set the intervals of the contours and the
annotation on the contours respectively.

In this example we supply the data as  1d :class:`numpy.ndarray` with the ``x``, ``y``,
and ``z`` parameters and draw the contours using a 0.5p pen with contours every 10 ``z`` values and
annotations every 20 ``z`` values.

.. GENERATED FROM PYTHON SOURCE LINES 20-47



.. image:: /gallery/images/images/sphx_glr_contours_001.png
    :alt: contours
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default



    import numpy as np
    import pygmt

    # build the contours underlying data with the function z = x^2 + y^2
    X, Y = np.meshgrid(np.linspace(-10, 10, 50), np.linspace(-10, 10, 50))
    Z = X ** 2 + Y ** 2
    x, y, z = X.flatten(), Y.flatten(), Z.flatten()


    fig = pygmt.Figure()
    fig.contour(
        region=[-10, 10, -10, 10],
        projection="X10c/10c",
        frame="ag",
        pen="0.5p",
        # pass the data as 3 1d data columns
        x=x,
        y=y,
        z=z,
        # set the contours z values intervals to 10
        levels=10,
        # set the contours annotation intervals to 20
        annotation=20,
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.894 seconds)


.. _sphx_glr_download_gallery_images_contours.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: contours.py <contours.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: contours.ipynb <contours.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
